--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
         <title>Textify clone</title>
         <link rel="stylesheet" href="tfc.css">
         <script src="tfc.js"></script>
